--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,126 @@
 body{
-    background: powderblue;
+    background: rgba(0, 0, 0, 0.4);
+    margin: 0;
+    padding: 0;
 }
+.container{
+    display: flex;
+}
+
+.sidebar{
+    position: relative;
+    width: 35vw;
+    height: 100vh;
+}
+.image{
+    width: inherit;
+    height: inherit;
+    vertical-align: middle;
+}
+
+.textSection{
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    width: 100%;
+    border: 2px solid goldenrod;
+}
+
+input{
+    height: 1.5rem;
+}
+
+.companyName{
+text-align: center;
+color: white;
+font-size: 2rem;
+}
+
+.company{
+    height: auto;
+    background: rgba(0, 0, 0, 0.4);
+    position: absolute;
+    z-index: 9;
+    top: 32vh;
+    width: 100%;
+  
+}
+
+form{
+    display: grid;
+    justify-items: center;
+    grid-template-columns: 1fr 1fr ;
+    grid-template-rows: 1fr 1fr 1fr;
+    border: 2px solid blue;
+}
+.form{
+    padding: 2rem;
+    background: rgba(0, 0, 0, 0.4);
+}
+
+.callText{
+    border: 2px solid goldenrod;
+    width: 50vw;
+    align-self: center;
+    margin-bottom: 2rem;
+}
+
+.inputs{
+    display: flex;
+    flex-direction: column;
+    
+}
+
+input{
+width: 400px;
+}
+
+.input-pwd{
+    position: relative;
+}
+
+.callText, .lets{
+    font-size: 1.5rem;
+}
+
+button{
+margin-top: 2rem;
+}
+
+#message{
+    position: absolute;
+    top: 3rem;
+    z-index: 3;
+}
+
+/* valid and invalid password styles */
+input:user-invalid{
+    border: 2px solid red;
+}
+
+.valid {
+    color: green;
+  }
+  
+  .valid:before {
+    position: relative;
+    left: -10px;
+    content: "✓";
+  }
+  
+  /* Add a red text color and an "x" icon when the requirements are wrong */
+  .invalid {
+    color: red;
+  }
+  
+  .invalid:before {
+    position: relative;
+    left: -10px;
+    content: "×";
+  }
+
+
+
+
+
+
